[package]
name = "tonic-otel-deadlock"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"

[[bin]]
name = "client"

[dependencies]
opentelemetry = { version = "0.23.0", features = ["trace"] }
opentelemetry-http = "0.12.0"
opentelemetry-otlp = "0.16.0"
opentelemetry_sdk = "0.23.0"
prost = "0.12.6"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
tonic = "0.11.0"
tonic-build = "0.11.0"
tonic-web = "0.11.0"
tonic-web-wasm-client = "0.5.1"
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["trace"] }
tracing = "0.1.40"
tracing-opentelemetry = "0.24.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.11.0"
